MyDemoOrg/force-app/main/default/objects/fferpcore__ConfigurationItem__mdt/fields/fferpcore__LargeData__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__LargeData__c</fullName>
    <description>Data that defines the record&apos;s processes and exceeds 255 characters. Querying this field contributes to query limits in Salesforce.</description>
    <inlineHelpText>Data that defines the record&apos;s processes and exceeds 255 characters. Querying this field contributes to query limits in Salesforce.</inlineHelpText>
    <label>Large Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>