MyDemoOrg/force-app/main/default/objects/fferpcore__ConfigurationItem__mdt/fields/fferpcore__SObjectField__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__SObjectField__c</fullName>
    <description>A Salesforce field that relates to the object specified and is used by the configuration item&apos;s processes. Defining the field ensures that it cannot be deleted.</description>
    <inlineHelpText>A Salesforce field that relates to the object specified and is used by the configuration item&apos;s processes. Defining the field ensures that it cannot be deleted.</inlineHelpText>
    <label>Field</label>
    <metadataRelationshipControllingField>fferpcore__ConfigurationItem__mdt.fferpcore__SObjectType__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>FinancialForce_Configuration_Items</relationshipLabel>
    <relationshipName>FinancialForce_Configuration_Items</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>